code smells
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>